remove mark completed button

--- a/tasks.json
+++ b/tasks.json
@@ -3,7 +3,7 @@
         "completed": true,
         "description": "sdsad\nsad\nsad\nsad\nsa\n",
         "dueDate": "2024-05-19",
-        "priority": "High",
+        "priority": "Low",
         "taskText": "dsadsada"
     }
 ]
