--- a/tasks.json
+++ b/tasks.json
@@ -1,10 +1,19 @@
 [
     {
+        "category": "",
+        "completed": false,
+        "description": "",
+        "dueDate": "2024-05-20",
+        "dueTime": "00:00",
+        "priority": "Low",
+        "taskText": "dsdasda"
+    },
+    {
         "category": "personal",
         "completed": true,
         "description": "sdsad\nsad\nsad\nsad\nsa\n",
         "dueDate": "2024-06-07",
-        "dueTime": "15:00",
+        "dueTime": "23:00",
         "priority": "High",
         "taskText": "hhhh"
     }
