--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build macOS Executable
 
-on: [push]
+on:
+  push:
+    branches:
+      - main  # Ensure this matches your main branch name
 
 jobs:
   build:
@@ -8,17 +11,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.10.0'  # Specify the exact version if needed
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
+
     - name: Build executable
       run: |
         pyinstaller --onefile main.py
+
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
