Configuration manager - save filter,sort

--- a/tasks.json
+++ b/tasks.json
@@ -1,5 +1,14 @@
 [
     {
+        "category": "personal",
+        "completed": true,
+        "description": "sdsad\nsad\nsad\nsad\nsa\n",
+        "dueDate": "2024-06-07",
+        "dueTime": "23:00",
+        "priority": "High",
+        "taskText": "hhhh"
+    },
+    {
         "category": "",
         "completed": false,
         "description": "",
@@ -9,12 +18,21 @@
         "taskText": "dsdasda"
     },
     {
-        "category": "personal",
+        "category": "",
         "completed": true,
-        "description": "sdsad\nsad\nsad\nsad\nsa\n",
-        "dueDate": "2024-06-07",
-        "dueTime": "23:00",
-        "priority": "High",
-        "taskText": "hhhh"
+        "description": "",
+        "dueDate": "2024-05-20",
+        "dueTime": "00:00",
+        "priority": "Low",
+        "taskText": "dssa"
+    },
+    {
+        "category": "",
+        "completed": false,
+        "description": "",
+        "dueDate": "2024-05-20",
+        "dueTime": "00:00",
+        "priority": "Low",
+        "taskText": "dsadas"
     }
 ]
