--- a/tasks.json
+++ b/tasks.json
@@ -1,5 +1,23 @@
 [
     {
+        "category": "",
+        "completed": false,
+        "description": "",
+        "dueDate": "2024-05-25",
+        "dueTime": "00:00",
+        "priority": "Medium",
+        "taskText": "dsadasss"
+    },
+    {
+        "category": "",
+        "completed": true,
+        "description": "",
+        "dueDate": "2024-05-20",
+        "dueTime": "00:00",
+        "priority": "Low",
+        "taskText": "dssa"
+    },
+    {
         "category": "personal",
         "completed": true,
         "description": "sdsad\nsad\nsad\nsad\nsa\n",
@@ -12,27 +30,18 @@
         "category": "",
         "completed": false,
         "description": "",
-        "dueDate": "2024-05-20",
+        "dueDate": "2024-05-25",
         "dueTime": "00:00",
         "priority": "Low",
-        "taskText": "dsdasda"
-    },
-    {
-        "category": "",
-        "completed": true,
-        "description": "",
-        "dueDate": "2024-05-20",
-        "dueTime": "00:00",
-        "priority": "Low",
-        "taskText": "dssa"
+        "taskText": "title"
     },
     {
         "category": "",
         "completed": false,
         "description": "",
-        "dueDate": "2024-05-20",
+        "dueDate": "2024-05-26",
         "dueTime": "00:00",
         "priority": "Low",
-        "taskText": "dsadas"
+        "taskText": "dsadasdadsadadasdadadad"
     }
 ]
