--- a/tasks.json
+++ b/tasks.json
@@ -3,6 +3,15 @@
         "category": "",
         "completed": false,
         "description": "",
+        "dueDate": "2024-05-26",
+        "dueTime": "00:00",
+        "priority": "Low",
+        "title": "dsadasdadsadadasdadadad"
+    },
+    {
+        "category": "",
+        "completed": false,
+        "description": "",
         "dueDate": "2024-05-25",
         "dueTime": "00:00",
         "priority": "Medium",
@@ -32,16 +41,7 @@
         "description": "",
         "dueDate": "2024-05-25",
         "dueTime": "00:00",
-        "priority": "Low",
+        "priority": "High",
         "title": "title"
-    },
-    {
-        "category": "",
-        "completed": false,
-        "description": "",
-        "dueDate": "2024-05-26",
-        "dueTime": "00:00",
-        "priority": "Low",
-        "title": "dsadasdadsadadasdadadad"
     }
 ]
