--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build macOS Executable
 on:
   push:
     branches:
-      - main  # Ensure this matches your main branch name
+      - main
 
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10'  # Specify the exact version if needed
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
@@ -24,10 +24,14 @@ jobs:
 
     - name: Build executable
       run: |
-        pyinstaller --windowed --onefile --icon=icon.ico  main.py
+        pyinstaller --windowed --onefile --icon=icon.ico main.py
+
+    - name: Create archive
+      run: |
+        tar -czvf macos-executable.tar.gz -C dist .
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: macos-executable
-        path: dist/
+        path: macos-executable.tar.gz
