--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'  # Run this workflow when a new tag is pushed
 
 jobs:
   build:
@@ -24,7 +26,7 @@ jobs:
 
     - name: Build executable
       run: |
-        pyinstaller --windowed --onefile main.py
+        pyinstaller --windowed --onefile --icon=icon.ico main.py
 
     - name: Create archive
       run: |
@@ -35,3 +37,24 @@ jobs:
       with:
         name: macos-executable
         path: macos-executable.tar.gz
+
+    - name: Create GitHub Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}  # Use the pushed tag as the release tag
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: macos-executable.tar.gz
+        asset_name: macos-executable.tar.gz
+        asset_content_type: application/gzip
