--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,17 +43,17 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}  # Use the pushed tag as the release tag
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ github.ref_name }}  # Use the pushed tag as the release tag
+        release_name: Release ${{ github.ref_name }}
         draft: false
         prerelease: false
 
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: macos-executable.tar.gz
