--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,21 +39,21 @@ jobs:
         name: macos-executable
         path: macos-executable.tar.gz
 
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
+    - name: Get latest release
+      id: get_latest_release
+      uses: octokit/request-action@v2.0.21
       with:
-        tag_name: ${{ github.ref_name }}  # Use the pushed tag as the release tag
-        release_name: Release ${{ github.ref_name }}
-        draft: false
-        prerelease: false
-        token: ${{ secrets.PAT_TOKEN }}
+        route: GET /repos/${{ github.repository }}/releases/latest
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
     - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: macos-executable.tar.gz
-        asset_name: macos-executable.tar.gz
-        asset_content_type: application/gzip
-        token: ${{ secrets.PAT_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+      run: |
+        LATEST_RELEASE_ID=$(echo "${{ steps.get_latest_release.outputs.data }}" | jq -r '.id')
+        UPLOAD_URL=$(echo "${{ steps.get_latest_release.outputs.data }}" | jq -r '.upload_url' | sed 's/{?name,label}//')
+        curl -XPOST -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Content-Type: application/gzip" \
+            --data-binary @macos-executable.tar.gz \
+            "$UPLOAD_URL?name=macos-executable.tar.gz"
