--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     runs-on: macos-latest
 
+    if: contains(github.event.head_commit.message, '--b')  # Only run if commit message contains '--b'
+
     steps:
     - uses: actions/checkout@v2
 
@@ -46,7 +48,7 @@ jobs:
         draft: false
         changelog: CHANGELOG.md
         changelog-entry: $version
-        regex: "/^Release: #{semver}$/i"
+        regex: '^Release: \d+\.\d+\.\d+$'  # Use a simpler regex for matching semantic versioning
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
