--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: AutoRelease
+name: Conditional Build and Release
 
 on:
   push:
@@ -9,55 +9,67 @@ jobs:
   build:
     runs-on: macos-latest
 
-    if: contains(github.event.head_commit.message, '--b')  # Only run if commit message contains '--b'
-
     steps:
     - uses: actions/checkout@v2
 
+    - name: Check for --b in commit message
+      id: check_message
+      run: |
+        echo "COMMIT_MESSAGE=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
+        if [[ "${COMMIT_MESSAGE}" != *"--b"* ]]; then
+          echo "Commit message does not contain --b. Exiting."
+          exit 0
+        fi
+
     - name: Set up Python
+      if: env.COMMIT_MESSAGE && contains(env.COMMIT_MESSAGE, '--b')
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
 
     - name: Install dependencies
+      if: env.COMMIT_MESSAGE && contains(env.COMMIT_MESSAGE, '--b')
       run: |
         python -m pip install --upgrade pip
         pip install pillow
         pip install pyinstaller
 
     - name: Build executable
+      if: env.COMMIT_MESSAGE && contains(env.COMMIT_MESSAGE, '--b')
       run: |
         pyinstaller --windowed --onefile --icon=icon.ico main.py
 
     - name: Create archive
+      if: env.COMMIT_MESSAGE && contains(env.COMMIT_MESSAGE, '--b')
       run: |
         tar -czvf macos-executable.tar.gz -C dist .
 
     - name: Upload artifact
+      if: env.COMMIT_MESSAGE && contains(env.COMMIT_MESSAGE, '--b')
       uses: actions/upload-artifact@v2
       with:
         name: macos-executable
         path: macos-executable.tar.gz
 
-    - name: Create or Update GitHub Release
+    - name: Create GitHub Release
+      if: env.COMMIT_MESSAGE && contains(env.COMMIT_MESSAGE, '--b')
       id: create_release
-      uses: CupOfTea696/gh-action-auto-release@v1.0.0
+      uses: actions/create-release@v1
       with:
-        title: "Release: $version"
-        tag: "v$semver"
+        tag_name: ${{ github.sha }}
+        release_name: Release ${{ github.sha }}
         draft: false
-        changelog: CHANGELOG.md
-        changelog-entry: $version
-        regex: '^Release: \d+\.\d+\.\d+$'  # Use a simpler regex for matching semantic versioning
+        prerelease: false
       env:
-        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Release Asset
+      if: env.COMMIT_MESSAGE && contains(env.COMMIT_MESSAGE, '--b')
       env:
-        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        UPLOAD_URL=$(echo "${{ steps.create_release.outputs.upload_url }}" | sed 's/{?name,label}//')
+        UPLOAD_URL="${{ steps.create_release.outputs.upload_url }}"
         curl -XPOST -H "Authorization: token $GITHUB_TOKEN" \
             -H "Content-Type: application/gzip" \
             --data-binary @macos-executable.tar.gz \
-            "$UPLOAD_URL?name=macos-executable.tar.gz"
+            "${UPLOAD_URL}?name=macos-executable.tar.gz"
